# Unmixing-SSP-Soft

./: MoffetROI.tif  README.md  spectraMoffetROI.h5  spectraSynth.h5
IHMUnmix/: CMakeLists.txt  FenImageHyper.ui  IHMUnmix_en_150.ts  fenimagehyper.cpp  fenimagehyper.h  fenprimaire.cpp  fenprimaire.h  fenresult.cpp  fenresult.h  fensynthpixel.cpp  fensynthpixel.h  fensynthpixel.ui  main.cpp
libUnmix/: CMakeLists.txt  libUnmixConfig.cmake.in  libUnmixConfigVersion.cmake.in
libUnmix/libUnmix/: CMakeLists.txt
libUnmix/libUnmix/include/: libImage.h  libUnmix_global.h  libgraph.h  libmcmc.h  libpixelsynth.h  readH5File.h  unmixing.h
libUnmix/libUnmix/src/: libImage.cpp  libgraph.cpp  libmcmc.cpp  libpixelsynth.cpp
